istio/labs/003/infra/frontend-istio-vsvc.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend-virtualservice
  namespace: labs
spec:
  hosts:
    - "*"
  gateways:
    - frontend-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: frontend.labs.svc.cluster.local
            port:
              number: 8080
